apps/platform/traefik/routes/oauth2-proxy-error-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-errors
  namespace: traefik
spec:
  errors:
    status:
      - "401"
    service:
      name: oauth2-proxy
      namespace: traefik
      port: 4180
    query: /oauth2/start?rd=https://traefik.oremuslabs.app/dashboard/
