apps/platform/traefik/routes/oauth2-proxy-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-headers
  namespace: traefik
spec:
  headers:
    sslRedirect: true
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    sslHost: traefik.oremuslabs.app
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true
