apps/platform/traefik/routes/oauth2-proxy-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://oauth2-proxy.traefik.svc.cluster.local:4180/oauth2/start?rd=https://traefik.oremuslabs.app/dashboard/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
