apps/platform/traefik/routes/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-whitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.oremuslabs.app`) && Path(`/`)
    middlewares:
    - name: traefik-dashboard-root-redirect
      namespace: traefik
    services:
    - kind: TraefikService
      name: api@internal
  - kind: Rule
    match: Host(`traefik.oremuslabs.app`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    middlewares:
    - name: oauth2-proxy-auth
      namespace: traefik
    services:
    - kind: TraefikService
      name: api@internal
  - kind: Rule
    match: Host(`traefik.oremuslabs.app`) && PathPrefix(`/oauth2`)
    services:
    - name: oauth2-proxy
      namespace: traefik
      port: 4180
  tls:
    secretName: oremuslabs-app-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-root-redirect
  namespace: traefik
spec:
  redirectRegex:
    regex: "^/$"
    replacement: "https://traefik.oremuslabs.app/dashboard/"
    permanent: true
